--- a/prisma-api/package.json
+++ b/prisma-api/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/graphql-fields": "^1.3.4",
     "@types/node": "^17.0.12",
     "prisma": "^3.8.1",
     "ts-node": "^10.4.0",
+    "typegraphql-prisma": "^0.18.4",
     "typescript": "^4.5.5"
   },
   "dependencies": {
@@ -21,8 +23,10 @@
     "class-validator": "^0.13.2",
     "express": "^4.17.2",
     "graphql": "^15.8.0",
+    "graphql-fields": "^2.0.3",
     "graphql-playground-middleware-express": "^1.7.23",
     "graphql-scalars": "^1.14.1",
+    "graphql-type-json": "^0.3.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typedi": "^0.10.0"
